WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88530
[BlackBerry] User viewport arguments are not respected
https://bugs.webkit.org/show_bug.cgi?id=88530
Summary
[BlackBerry] User viewport arguments are not respected
Arvid Nilsson
Reported
2012-06-07 06:12:24 PDT
They're being overwritten by default arguments when the page loads.
Attachments
Patch
(2.13 KB, patch)
2012-06-07 06:17 PDT
,
Arvid Nilsson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Arvid Nilsson
Comment 1
2012-06-07 06:13:14 PDT
Internal PR #163767, this is a regression due to the fix for
bug #87817
Arvid Nilsson
Comment 2
2012-06-07 06:17:56 PDT
Created
attachment 146271
[details]
Patch
WebKit Review Bot
Comment 3
2012-06-07 07:31:16 PDT
Comment on
attachment 146271
[details]
Patch Clearing flags on attachment: 146271 Committed
r119721
: <
http://trac.webkit.org/changeset/119721
>
WebKit Review Bot
Comment 4
2012-06-07 07:31:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug