[BlackBerry] User viewport arguments are not respected https://bugs.webkit.org/show_bug.cgi?id=88530

Patch by Arvid Nilsson <anilsson@rim.com> on 2012-06-07
Reviewed by Antonio Gomes.

RIM PR #163767

Fixed by applying the user supplied viewport arguments if the page
specifies default viewport arguments (i.e. the page has no viewport
meta tag).

If the user didn't supply any viewport arguments either, the behaviour
is the same as before the patch, the caller will successfully reset to
default viewport arguments.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::dispatchViewportPropertiesDidChange):

Canonical link: https://commits.webkit.org/106360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119721 268f45cc-cd09-0410-ab3c-d52691b4dbfc